include/dss_capi.h

    /* Functions start here */

    DSS_CAPI_DLL void DSS_ResetStringBuffer(void);
    DSS_CAPI_DLL void DSS_Dispose_PByte(int8_t** p);
    DSS_CAPI_DLL void DSS_Dispose_PDouble(double** p);
    DSS_CAPI_DLL void DSS_Dispose_PInteger(int32_t** p);
    DSS_CAPI_DLL void DSS_Dispose_PPAnsiChar(char ***p, int32_t cnt);
    DSS_CAPI_DLL char* DSS_Get_PAnsiChar(void *p, int32_t index);
    /*
    Dispose temporary buffer data in the global result (GR) pointers
    */
    DSS_CAPI_DLL void DSS_DisposeGRData(void);
    /*
    Get references to the global result (GR) pointers, used in
    the *_GR variations of most getter functions

    The returned values in the DataPtrs will contain pointers to the global variables that contains the actual pointers.
    The CountPtrs are not reallocated during the execution, so the returned values contain the actual pointer values.
    */
    DSS_CAPI_DLL void DSS_GetGRPointers(
        char**** DataPtr_PPAnsiChar,
        double*** DataPtr_PDouble,
        int32_t*** DataPtr_PInteger,
        int8_t*** DataPtr_PByte,
        int32_t** CountPtr_PPAnsiChar,
        int32_t** CountPtr_PDouble,
        int32_t** CountPtr_PInteger,
        int32_t** CountPtr_PByte
    );
    /* Functions to get the current GR pointers individually, used in MATLAB */
    DSS_CAPI_DLL double* DSS_GR_DataPtr_PDouble(void);
    DSS_CAPI_DLL int32_t* DSS_GR_DataPtr_PInteger(void);
    DSS_CAPI_DLL int8_t* DSS_GR_DataPtr_PByte(void);
    DSS_CAPI_DLL int32_t* DSS_GR_CountPtr_PDouble(void);
    DSS_CAPI_DLL int32_t* DSS_GR_CountPtr_PInteger(void);
    DSS_CAPI_DLL int32_t* DSS_GR_CountPtr_PByte(void);
    DSS_CAPI_DLL void DSS_Dispose_PPointer(void*** p);
    /*
    `DSS_BeginPascalThread` can be used to start a new thread from the Pascal side.
    Use this if you experience issues with your languages normal threads.
    
    `func` is the address of the function that will be run in the thread.
    `paramptr` is a pointer to the data to pass as a parameter when calling
    `func`.

    NOTE: this function will be removed in a future version if DSS C-API is
          reimplemented in another language.
    */
    DSS_CAPI_DLL void *DSS_BeginPascalThread(void *func, void *paramptr);
    /*
    Use this function to wait for a thread started by `DSS_BeginPascalThread`
    to finish.

    NOTE: this function will be removed in a future version if DSS C-API is
          reimplemented in another language.
    */
    DSS_CAPI_DLL void DSS_WaitPascalThread(void *handle);